--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,14 +5,15 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="16" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:allowBackup="false">
         <activity
-            android:name=".Principal"
+            android:name="br.du.fasa.CV.Presentation.Principal"
             android:label="@string/title_activity_principal" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CadCliente"
+            android:name="br.du.fasa.CV.Presentation.CadCliente"
             android:label="@string/title_activity_cadastro" >
         </activity>
         <activity
@@ -35,11 +36,6 @@
         <activity
             android:name="br.du.fasa.CV.Presentation.CadCategoria"
             android:label="@string/title_activity_cad_categoria" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
