Vendas funcionando, gravando documentos de acordo com numero de parcelas exigidos. Lista de documentos a vencer com opção para marcar documentos como faturados.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".presentation.ListaCliente"/>
         <activity android:name=".presentation.ListaCategoria"/>
         <activity android:name=".presentation.ListaProduto"/>
+        <activity android:name=".presentation.ListaVenda"/>
+        <activity android:name=".presentation.ListaDocumento"/>
         <activity android:name=".presentation.InserirProduto"/>
     </application>
 
